# Telco-Customer-Churn-ML

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: CatBoost.pkl  Decision_Tree.pkl  Elastic_Net_LR.pkl  Lasso_LR__L1.pkl  LightGBM.pkl  Random_Forest_pipe.pkl  Ridge_LR__L2.pkl  Ridge_LR__L2_pipe.pkl  XGBoost.pkl  registry.json
notebooks/: Customer_Churn_End_to_End.ipynb  mlflow.db
notebooks/.ipynb_checkpoints/: Customer_Churn_End_to_End-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/mlruns/1/models/m-1f088fb9aa4c476a90c2e8afef7f4032/artifacts/: MLmodel  model.skops
notebooks/mlruns/1/models/m-21a236ee0b23409dba992bad492952d3/artifacts/: MLmodel  model.skops
scripts/: save_model_for_api.py  train.py
src/api/: main.py
src/config/: config.py
src/data/: load_data.py
src/features/: feature_engineering.py
src/models/: evaluate.py  predict.py  train.py
src/monitoring/: mlflow_logger.py
src/pipelines/: inference_pipeline.py  preprocessing_pipeline.py  training_pipeline.py
src/preprocessing/: cleaning.py  encoding.py  transformers.py
src/utils/: helper.py  logger.py  model_store.py
src/validation/: gx_validation.py
tests/: conftest.py  test_api.py  test_preprocessing.py  test_training_pipeline.py  test_validation.py
(+31 files in other folders)
