[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "customer-churn"
version         = "1.0.0"
description     = "Production ML pipeline for Telco customer churn prediction"
requires-python = ">=3.11"
readme          = "README.md"

[tool.pytest.ini_options]
testpaths    = ["tests"]
pythonpath   = ["src"]
addopts      = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
